Prettier and eslint config

--- a/package.json
+++ b/package.json
@@ -40,15 +40,17 @@
         "@babel/core": "^7.12.9",
         "@types/react": "~17.0.21",
         "@types/react-native": "~0.66.13",
-        "@typescript-eslint/eslint-plugin": "^5.27.1",
-        "@typescript-eslint/parser": "^5.27.1",
-        "eslint": "^8.17.0",
+        "@typescript-eslint/eslint-plugin": "^5.28.0",
+        "@typescript-eslint/parser": "^5.28.0",
+        "eslint": "^8.0.1",
         "eslint-config-prettier": "^8.5.0",
         "eslint-config-standard": "^17.0.0",
-        "eslint-plugin-import": "^2.26.0",
-        "eslint-plugin-n": "^15.2.2",
+        "eslint-plugin-import": "^2.25.2",
+        "eslint-plugin-n": "^15.0.0",
         "eslint-plugin-promise": "^6.0.0",
         "eslint-plugin-react": "^7.30.0",
+        "eslint-plugin-react-native": "^4.0.0",
+        "eslint-plugin-testing-library": "^5.5.1",
         "jest": "^26.6.3",
         "jest-expo": "~45.0.0",
         "prettier": "2.6.2",
