Ready ChatMessages component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "window.activeBorder": "#175346",
     "tab.activeBackground": "#175346",
     "titleBar.activeBackground": "#309674"
-  }
+  },
+  "cSpell.words": [
+    "trasparent"
+  ]
 }
