KeyboardAvoidingView in input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,5 @@
     "tab.activeBackground": "#175346",
     "titleBar.activeBackground": "#309674"
   },
-  "cSpell.words": [
-    "trasparent"
-  ]
+  "cSpell.words": ["trasparent"]
 }
