--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
+    "react-native-emoji-selector": "^0.2.0",
     "react-native-pager-view": "5.4.15",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
