--- a/package.json
+++ b/package.json
@@ -17,11 +17,12 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@aws-amplify/ui-react": "^3.5.1",
+    "@aws-amplify/ui-react": "^3.5.10",
+    "@aws-sdk/eventstream-codec": "^3.199.0",
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "^1.17.10",
-    "@react-native-community/netinfo": "^9.3.0",
-    "@react-native-picker/picker": "^2.4.4",
+    "@react-native-community/netinfo": "^8.2.0",
+    "@react-native-picker/picker": "2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
     "@react-navigation/material-top-tabs": "^6.2.1",
     "@react-navigation/native": "^6.0.2",
@@ -29,9 +30,9 @@
     "@react-navigation/stack": "^6.2.1",
     "@rneui/base": "^4.0.0-rc.5",
     "@rneui/themed": "^4.0.0-rc.5",
-    "amazon-cognito-identity-js": "^5.2.10",
-    "aws-amplify": "^4.3.34",
-    "aws-amplify-react-native": "^6.0.5",
+    "amazon-cognito-identity-js": "^5.2.12",
+    "aws-amplify": "^4.3.42",
+    "aws-amplify-react-native": "^6.0.8",
     "expo": "~45.0.0",
     "expo-asset": "~8.5.0",
     "expo-constants": "~13.1.1",
